# ACLED-flat-hierarchical

./: .gitignore  README.md  pyproject.toml
paths/: .env.eda
src/: settings.py
src/eda/: class_distribution_visualization.py  crossvalidation_analysis.py
src/evaluation_graphs/: level2.py  predictions_shares.py  runtime.py
src/feature_extractors/: BERT_Vectorizer.py  CountVectorizer.py  FastText.py  TFIDF.py  Word2Vec.py
src/models/: LR.py  RF.py  SVM.py
src/predictions/: lr_flat_level1.py  lr_flat_level2.py  lr_hierarchical.py  lr_hierarchical_three_levels.py  rf_flat_level1.py  rf_flat_level2.py  rf_hierarchical.py  rf_hierarchical_three_levels.py  svm_flat_level1.py  svm_flat_level2.py  svm_hierarchical.py  svm_hierarchical_three_levels.py
src/preprocess/: dataset_creation.py  preprocessing.py
src/utils/: conversion_functions.py  cross_validation.py  evaluation_functions.py
